# python-poetry-template

./: README.md  pyproject.toml
app/: cli.py  logger.py
